Add caution aside to remind about using default install path

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -37,7 +37,13 @@ To get SplashKit and other coding tools installed on Windows, using MSYS2, follo
 
 2. To install MSYS2, double-click the downloaded executable file, and follow the on-screen instructions.
 
-    Make sure to use the default install path.
+    :::caution[Use the default install path]
+
+    Make sure to use the default install path: `C:\msys64`
+
+    *Using other paths may cause issues.*
+
+    :::
 
 3. ### Use the "MINGW64" terminal
 
