--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -261,9 +261,9 @@ Once you have your code project set up, Visual Studio Code will be the main prog
             "CHERE_INVOKING": "1"
         },
         "C_Cpp.default.systemIncludePath": [
-            "${default}",
             "C:\\msys64\\mingw64\\bin\\**",
-            "C:\\msys64\\mingw64\\include\\**"
+            "C:\\msys64\\mingw64\\include\\**",
+            "${default}"
         ],
         "files.autoSave": "afterDelay",
         "editor.formatOnSave": true,
