Fix paths to terminal images - make sure relative

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/1-tour/3-1-terminal.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/1-tour/3-1-terminal.mdx
@@ -32,7 +32,7 @@ To open the Terminal on macOS, press ***Command*** (⌘) + ***Space bar*** to op
 
     Click the Terminal icon in the task bar or press `Ctrl + Alt + T`.
 
-    ![Image Showing the Terminal Icon](/book/appendix/0-installation/images/setup-pi/1-2-setup-pi-Terminal_Icon.png)
+    ![Image Showing the Terminal Icon](../../../appendix/0-installation/images/setup-pi/1-2-setup-pi-Terminal_Icon.png)
     <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
 </TabItem>
@@ -43,7 +43,7 @@ You will need to have installed MSys2. Use the instructions in the [appendix](/b
 
 To open the **MINGW64** terminal (not MSYS2, UCRT64, etc), search "mingw64" in the Windows Start menu and then select the **MSYS2 MINGW64** App (green box below):
 
-![Image showing how to open MSYS2 MINGW64 Terminal](/book/appendix/0-installation/images/setup-windows/open-mingw64-terminal.png)
+![Image showing how to open MSYS2 MINGW64 Terminal](../../../appendix/0-installation/images/setup-windows/open-mingw64-terminal.png)
 <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
 </TabItem>
@@ -52,7 +52,7 @@ To open the **MINGW64** terminal (not MSYS2, UCRT64, etc), search "mingw64" in t
 
 To open a WSL Terminal, search "Ubuntu" in the Windows Start menu, and then select the Ubuntu App (green box below):
 
-![Open Ubuntu Terminal](/book/appendix/0-installation/images/setup-windows/ubuntu-terminal-open.png)
+![Open Ubuntu Terminal](../../../appendix/0-installation/images/setup-windows/ubuntu-terminal-open.png)
 <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
 *You can also follow the steps in the [Configure 'Windows Terminal'](/book/appendix/0-installation/2-6-setup-win-wsl/#configure-windows-terminal) section of the WSL installation page to set up the Windows "Terminal" app to use the WSL terminal.*
@@ -77,4 +77,3 @@ For these commands to work, make sure you are using double quotes (") around the
 :::
 
 Now let's have a look at the basic commands you will need to use... these will be enough to get you started and you can learn more as you go.
-
