--- a/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
@@ -1,162 +1,188 @@
 ---
-title: LED Blink
+title: Hello LED Blinking
 sidebar:
-    attrs:
-        class: pi
+  attrs:
+    class: pi
 ---
 
-import { Accordion, AccordionItem, Steps } from 'accessible-astro-components'
+import { Accordion, AccordionItem } from 'accessible-astro-components'
+import { Steps } from "@astrojs/starlight/components";
 
-## Overview
-
-Welcome to our fun, step-by-step guide on how to blink a physical LED using SplashKit on your Raspberry Pi! In this tutorial, you'll learn how to set up your hardware, write simple code (without loops) to turn your LED on and off with delays, and run your project. Get ready to see your LED come to life!
+Welcome to our fun, step-by-step guide on how to blink a physical LED using SplashKit on your Raspberry Pi! In this tutorial, you'll learn how to set up your hardware, write simple code to turn your LED on and off multiple times, as well as how to run your project. Get ready to see your LED come to life!
 
 ## Hardware Setup
 
-Imagine a simple LED circuit that you'd build in real life. Here's what you need:
+### Components
 
-- **LED:** (any color; remember: the longer leg is the anode, the shorter is the cathode)
+To build the simple LED circuit shown below (in real life), here's what you need:
+
+- **LED:** Can be any color.  
+  *Remember: the longer leg is the anode (+), the shorter is the cathode (-).*
 - **220 Ω Resistor:** This protects the LED by limiting the current.
 - **Breadboard and Jumper Wires:** For making temporary connections.
 - **Raspberry Pi:** With a GPIO pin (we'll use GPIO Pin 11) and a Ground (GND) pin.
 
-**Wiring Instructions:**
+:::note[Just getting started with circuits?]
 
-![Led Blink Circuit](./images/blinkledcircuit.png)
+These sections include links with more information about the circuit components:
 
-1. **Resistor Connection:** Attach one end of the resistor to GPIO Pin 11.
-2. **LED Connection:** Connect the LED’s anode (long leg) to the other end of the resistor.
-3. **Ground Connection:** Connect the LED’s cathode (short leg) to a GND pin on the Raspberry Pi.
+<details>
+<summary>LEDs and Resistors:</summary>
 
-:::caution
-**Safety Note:** Always double-check your connections and ground yourself before handling the circuit to avoid static discharge or accidental damage!
+- [LEDs (Introduction to Raspberry Pi Pico guide)](https://projects.raspberrypi.org/en/projects/introduction-to-the-pico/7)
+- [Resistors (Introduction to Raspberry Pi Pico guide)](https://projects.raspberrypi.org/en/projects/introduction-to-the-pico/6)
+- [Resistors for LED Circuits](https://eepower.com/resistor-guide/resistor-applications/resistor-for-led/)
+
+</details>
+<details>
+<summary>Breadboards and Jumper Wires:</summary>
+
+- [How to Use a Breadboard for Electronics and Circuits](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard)
+  - [What is inside a breadboard?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#inside-breadboard)
+  - [How are the holes connected?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#holes)
+  - [What is a breadboard diagram?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#breadboard-diagram)
+- [What are jumper wires and what kind should I use?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#jumper-wires)
+
+</details>
 :::
 
+### Wiring Instructions
 
+![Led Blink Circuit](./images/blink-led-circuit.png)
+<div class="caption">Image created with <a href="https://fritzing.org/">Fritzing</a></div>
 
-## 1. Initialization
+<Steps>
 
-First, we'll initialize the GPIO system on your Raspberry Pi using SplashKit and set up our chosen pin as an output.
+1. **Put the LED and resistor onto the breadboard:**
 
-```csharp
-using SplashKitSDK;
-using static SplashKitSDK.SplashKit;
+    Place the resistor across the center channel of the breadboard, or across any two separate rows.
 
-// Initialize the GPIO system
-RaspiInit();
+    Then place the LED across two rows (as shown in the breadboard diagram above), with the cathode (short leg) on the same row as one end of the resistor.
 
-// Define the LED pin (using physical Pin 11)
-Pins ledPin = Pins.Pin11;
+2. **Attach the ground wire:**
 
-// Set the LED pin to output mode (GPIO_OUTPUT mode is represented by 1)
-RaspiSetMode(ledPin, PinModes.GpioOutput);
-```
+    Attach a jumper wire from the other end of the resistor to a GND pin.  
+    *(This is the black wire connected to pin 6 in the diagram above.)*
 
-## 2. Blinking the LED
+3. **Connect the LED to the GPIO Pin:**
 
-Now, we’ll blink the LED by turning it on and off with delays. We’re keeping it simple—no loops here! Each command is written in sequence:
+    Attach a jumper wire from the LED’s anode (long leg) to GPIO Pin 11.
+    *(This is the blue wire connected to pin 11 in the diagram above.)*
 
-```csharp
-// Turn the LED ON
-RaspiWrite(ledPin, PinValues.GpioHigh);
-Delay(500);  // Wait for 500 milliseconds
+</Steps>
 
-// Turn the LED OFF
-RaspiWrite(ledPin, PinValues.GpioLow);
-Delay(500);  // Wait for 500 milliseconds
+:::caution[Safety Note:]
+Always double-check your connections and ground yourself before handling the circuit to avoid static discharge or accidental damage.
+:::
 
-// Blink the LED again (ON)
-RaspiWrite(ledPin, PinValues.GpioHigh);
-Delay(500);  // Wait for 500 milliseconds
+## Software Setup
 
-// Turn the LED OFF again
-RaspiWrite(ledPin, PinValues.GpioLow);
-Delay(500);  // Wait for 500 milliseconds
+To set up the software side of this project, you can follow the steps below:
 
-// One more blink (ON)
-RaspiWrite(ledPin, PinValues.GpioHigh);
-Delay(500);  // Wait for 500 milliseconds
+<Steps>
 
-// Finally, turn the LED OFF
-RaspiWrite(ledPin, PinValues.GpioLow);
-Delay(500);  // Wait for 500 milliseconds
-```
+1. ### Create a new C# project
 
-## Full Code Example
+    Open your terminal and create a new C# console project:
 
-Below is the complete code, combining the initialization and blinking sequence. All commands are executed one after the other—no loops!
+    ```shell
+    mkdir LedBlink
+    cd LedBlink
+    dotnet new console
+    dotnet add package SplashKit
+    code .
+    ```
 
-<Accordion>
-  <AccordionItem header="Full LED Blink Code (C#)">
-  
-  ```csharp
-  using SplashKitSDK;
-  
-  // Initialize the GPIO system
-  RaspiInit();
-  
-  // Define the LED pin (using physical Pin 11)
-  Pins ledPin = Pins.Pin11;
-  
-  // Set the LED pin to output mode
-  RaspiSetMode(ledPin, PinModes.GpioOutput);
-  
-  // Blink 1: Turn LED ON, wait, then OFF
-  RaspiWrite(ledPin, PinValues.GpioHigh);
-  Delay(500);  // LED ON for 500 ms
-  RaspiWrite(ledPin, PinValues.GpioLow);
-  Delay(500);  // LED OFF for 500 ms
-  
-  // Blink 2: Turn LED ON, wait, then OFF
-  RaspiWrite(ledPin, PinValues.GpioHigh);
-  Delay(500);
-  RaspiWrite(ledPin, PinValues.GpioLow);
-  Delay(500);
-  
-  // Blink 3: Turn LED ON, wait, then OFF
-  RaspiWrite(ledPin, PinValues.GpioHigh);
-  Delay(500);
-  RaspiWrite(ledPin, PinValues.GpioLow);
-  Delay(500);
-  
-  // Clean up the GPIO system
-  RaspiCleanup();
-  ```
-  
-  </AccordionItem>
-</Accordion>
+2. ### Write the code
 
-## Build and Run
+    Copy the code below, then replace the contents of your `Program.cs` file with this code:
 
-1. **Set Up Your Project:**
-   Open your terminal and create a new C## console project:
-   
-   ```bash
-   mkdir LedBlink  
-   cd LedBlink  
-   dotnet new console  
-   dotnet add package SplashKit  
-   code .
-   ```
-   
-2. **Paste the Code:**
-   Replace the contents of your `Program.cs` (or equivalent) with the full code example above.
+    ```csharp
+    using SplashKitSDK;
+    using static SplashKitSDK.SplashKit;
 
-3. **Build the Project:**
-   
-   ```bash
-   dotnet build
-   ```
+    // Initialise the GPIO system
+    RaspiInit();
 
-4. **Run the Program:**
-   
-   ```bash
-   dotnet run
-   ```
+    // Define the LED pin (using physical Pin 11)
+    GpioPin ledPin = GpioPin.Pin11;
+
+    // Set the LED pin to output mode
+    RaspiSetMode(ledPin, GpioPinMode.GpioOutput);
+
+    // Blink 1: Turn LED ON, wait, then OFF
+    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
+    Delay(500);  // LED ON for 500 ms
+    RaspiWrite(ledPin, GpioPinValue.GpioLow);
+    Delay(500);  // LED OFF for 500 ms
+
+    // Blink 2: Turn LED ON, wait, then OFF
+    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
+    Delay(500);
+    RaspiWrite(ledPin, GpioPinValue.GpioLow);
+    Delay(500);
+
+    // Blink 3: Turn LED ON, wait, then OFF
+    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
+    Delay(500);
+    RaspiWrite(ledPin, GpioPinValue.GpioLow);
+    Delay(500);
+
+    // Clean up the GPIO system
+    RaspiCleanup();
+    ```
+
+    :::note
+    You will learn more about SplashKit's Raspberry Pi code in Part 1, but for now you can just copy/paste this code without needing to know the details just yet.
+    :::
+
+3. ### Start the "pigpiod" Daemon
+
+    Underneath SplashKit we use the [Pigpio library](https://abyz.me.uk/rpi/pigpio), specifically its
+    daemon. To interface with this daemon, it must be running.
+
+    :::tip[Daemons]
+    A daemon is a background process that runs continuously, waiting for requests to
+    perform some action. In this case, the daemon is waiting for requests to change the state of the
+    GPIO pins. This allows us to run multiple programs that interact with the GPIO pins.
+    :::
+
+    To start the `pigpiod` daemon, run the following command:
+
+    ```shell
+    sudo pigpiod
+    ```
+
+    To stop the daemon from running, you can use the command:
+
+    ```shell
+    sudo killall pigpiod
+    ```
+
+    :::note[Pigpiod Error Message]
+
+    If the `pigpiod` daemon is not running, you will the following error message in your terminal:
+
+    ```shell
+    ERROR [default] Pigpio error: bad connect.
+    ```
+
+    :::
+
+4. ### Build and run the project
+
+    Use the following command to build and run the program:
+
+    ```shell
+    dotnet run
+    ```
+
+</Steps>
 
 ## Expected Outcome
 
 When you run the program, your physical LED connected to GPIO Pin 11 should blink on and off three times. Each "on" state lasts for 500 milliseconds followed by an "off" state for 500 milliseconds. Once the sequence is complete, the program cleans up the GPIO settings and exits.
-![Led Blinking](./images/LedBlinkSlow.gif)
+
+![Led Blinking](./images/led-blink-slow.gif)
 
 Enjoy watching your LED blink and have fun tinkering with your Raspberry Pi projects!
