Minor wording fix

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -280,7 +280,7 @@ Once you have your code project set up, Visual Studio Code will be the main prog
 
     :::note[Troubleshooting Notes:]
 
-    - If you already have some settings included in this file, you will need to add a comma `,` after the closing curly brace `}` on the line above your new line.
+    - If you already have some settings included in this file, you will need to add a comma `,` after the last line before the closing curly brace `}`, then press Enter and paste the code shown above.
     - If you already see code that looks similar to the code above, you may need to copy only small parts to match the code above.
     - The last line of the code above will set your default profile, so that it will automatically use the MSYS2 (MINGW64) terminal. You can also read this [article](https://code.visualstudio.com/docs/terminal/profiles) to see other ways to set the default terminal.
 
