Tidy up paths in msys compiler settings for vscode

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -260,15 +260,18 @@ Once you have your code project set up, Visual Studio Code will be the main prog
             "MSYSTEM": "MINGW64",
             "CHERE_INVOKING": "1"
         },
+        "github.copilot.enable": {
+            "*": false
+        },
         "C_Cpp.default.systemIncludePath": [
-            "C:\\msys64\\mingw64\\bin",
-            "C:\\msys64\\mingw64\\include",
-            "C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/15.1.0/../../../../include/c++/15.1.0",
-            "C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/15.1.0/../../../../include/c++/15.1.0/x86_64-w64-mingw32",
-            "C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/15.1.0/../../../../include/c++/15.1.0/backward",
-            "C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/15.1.0/include",
-            "C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/15.1.0/../../../../include",
-            "C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/15.1.0/include-fixed",
+            "C:/msys64/mingw64/bin",
+            "C:/msys64/mingw64/include",
+            "C:/msys64/mingw64/include/c++/15.1.0",
+            "C:/msys64/mingw64/include/c++/15.1.0/x86_64-w64-mingw32",
+            "C:/msys64/mingw64/include/c++/15.1.0/backward",
+            "C:/msys64/mingw64/lib/gcc/x86_64-w64-mingw32/15.1.0/include",
+            "C:/msys64/mingw64/include",
+            "C:/msys64/mingw64/lib/gcc/x86_64-w64-mingw32/15.1.0/include-fixed",
             "${default}"
         ],
         "C_Cpp.default.compilerPath": "C:/msys64/mingw64/bin/gcc.exe",
