Fix small typo in memory deep dive

--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/03-2-linked-add.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/03-2-linked-add.mdx
@@ -60,7 +60,7 @@ void add_node(linked_list<T> *list, T data)
     node<T> *new_node = (node<T> *) malloc(sizeof(node<T>));
     
     // Placement constructor to initialise data
-    new(new_node->data) T();
+    new(&new_node->data) T();
 
     new_node->data = data;
     new_node->next = nullptr;
