Fix deleting a node from the linked list

--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/03-3-linked-delete.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/03-3-linked-delete.mdx
@@ -1,7 +1,7 @@
 ---
 title: Deleting Nodes from a Linked List
 sidebar:
-    label: " - Deleting Nodes"
+    label: " - Delete All Nodes"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
