--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/03-5-linked-delete.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/03-5-linked-delete.mdx
@@ -1,7 +1,7 @@
 ---
-title: Removing Nodes from a Linked List
+title: Deleting a node from a Linked List
 sidebar:
-    label: " - Removing Nodes"
+    label: " - Deleting a Nodes"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
