Updated creating variables, improved explore structs, and added hints to contains function usage

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-3-menu.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-3-menu.mdx
@@ -164,7 +164,7 @@ Have a think about how you could validate the user input. Will this be a branch 
 
         while ( ! IsInteger(line) )
         {
-            WriteLine("Please enter a whiole number");
+            WriteLine("Please enter a whole number");
             Write("Enter your choice: ");
             line = ReadLine();
         }
